--- a/src/app/features/profiles/employer/employer-dashboard/employer-dashboard.html
+++ b/src/app/features/profiles/employer/employer-dashboard/employer-dashboard.html
@@ -40,9 +40,7 @@
                 <div class="p-5">
                     <section class="profile-section">
                         <div class="info row">
-                            <div class="image col-lg-4 col-md-3 col-sm-12 me-3">
-                                <img src="{{empData().companyImage}}" alt="image">
-                            </div>
+                            <img [src]="empData().companyImage ? empData().companyImage : '/default.jpg'" alt="Company Logo" class="image mb-3">
 
                             <div class="col-lg-6 col-md-4 col-sm-12">
                                 <div class="emp-name">
@@ -97,6 +95,8 @@
         <div class="p-3">
             <router-outlet></router-outlet>
         </div>    
+
+
         
     </div>
 </div>
